fix(ui): correct header alignment and scrollbar in legal pages.
Changes:
1. SettingsSectionHeader:
- Explicitly style SettingsSectionHeader's text to be aligned to the left. On smaller screens, long texts' wrapping can make them not consistent with short texts.

2. Privacy Policy page & Terms of Service page:
- Add a scrollbar-wrapper div wrapping over the page's content so the scrollbar isn't cut off like what we did in Account page before.

--- a/src/app/(main)/privacy/page.module.css
+++ b/src/app/(main)/privacy/page.module.css
@@ -1,10 +1,13 @@
 .privacy-page__content {
-  height: 100%;
   width: 100%;
-  padding: 0 10%;
   opacity: 0;
   animation: fadeIn 500ms ease forwards;
   margin-bottom: 3dvh;
+}
+.privacy-page__scrollbar-wrapper {
+  height: 100%;
+  width: 100%;
+  padding: 0 10%;
   overflow-y: auto;
   overflow-x: hidden;
 }
