--- a/src/app/(main)/terms/page.module.css
+++ b/src/app/(main)/terms/page.module.css
@@ -1,14 +1,16 @@
 .terms-page__content {
-  height: 100%;
   width: 100%;
-  padding: 0 10%;
   opacity: 0;
   animation: fadeIn 500ms ease forwards;
   margin-bottom: 3dvh;
+}
+.terms-page__scrollbar-wrapper {
+  height: 100%;
+  width: 100%;
+  padding: 0 10%;
   overflow-y: auto;
   overflow-x: hidden;
 }
-
 @keyframes fadeIn {
   to {
     opacity: 1;
